@@ -40,6 +40,7 @@ Engine fixes:
 * A fallback language is now selected when the desired language is not available in engine/languages.txt.
 * Fixed the origin point of post powers in some cases that would have them incorrectly use the caster's position otherwise.
 * Fixed the direction of moving powers when the origin and target are the same point.
+* Fixed cases where parts of WidgetSlider were being drawn outside the visible area.
 * Fixed infinite INCLUDE recursion in FileParser.
 * Android: Fix 'Flare' directory not being automatically created.
 * Android: Added a dialog to direct the player to the wiki page for installing if no game data is found.
